--- a/jnihds/build.xml
+++ b/jnihds/build.xml
@@ -3,7 +3,7 @@
 <!--
  !  JNIHDS build file
  !
- !   This file describes how to build the JNIAST package from a source
+ !   This file describes how to build the JNIHDS package from a source
  !   release. It requires Apache ANT and a Java Development Kit.
  !
  !      build            -> compiles the source code
@@ -318,7 +318,7 @@
     <!-- Copy extra files that should live with packages classes
      !   (i.e. are discovered using "getResource()"). -->
     <copy todir="${build.classes}">
-      <fileset dir="${java.dir}" includes=""/>
+      <fileset dir="${java.dir}" includes="[none]"/>
     </copy>
 
     <!-- Local third party jars, if any. Copy straight into
@@ -706,13 +706,6 @@
     <mkdir dir="${star.install}"/>
     <mkdir dir="${star.lib.pkg}"/>
     <mkdir dir="${star.docs.pkg}"/>
-
-    <loggedcopy todir="${star.bin}"
-                logfile="${install.log}"
-                overwrite="${install.overwrite}"
-                logfileAppend="false">
-      <fileset dir="${dist.bin}"/>
-    </loggedcopy>
 
     <loggedcopy todir="${star.lib}"
                 logfile="${install.log}"
