Deinstall target now fails silently if the installation log file is not present.

--- a/jetty/build.xml
+++ b/jetty/build.xml
@@ -327,8 +327,19 @@
    ! Uses the content of the "${install.log}" to remove the files
    ! that were copied into place by the install target.
    !-->
-  <target name="deinstall"
+ <target name="deinstall"
           description="-> undo the install target">
+
+    <available file="${install.log}" property="install.log.present"/>
+
+    <antcall target="real_deinstall"/>
+
+  </target>
+
+  <!-- Real deinstall target. Only activated if "install.log.present"
+   !   is defined -->
+  <target name="real_deinstall" 
+          if="install.log.present">
 
     <loadfile property="files" srcFile="${install.log}"/>
     <listdelete>
