--- a/jniast/build.xml
+++ b/jniast/build.xml
@@ -998,8 +998,19 @@
    ! Uses the content of the "${install.log}" to remove the files
    ! that were copied into place by the install target.
    !-->
-  <target name="deinstall"
+ <target name="deinstall"
           description="-> undo the install target">
+
+    <available file="${install.log}" property="install.log.present"/>
+
+    <antcall target="real_deinstall"/>
+
+  </target>
+
+  <!-- Real deinstall target. Only activated if "install.log.present"
+   !   is defined -->
+  <target name="real_deinstall" 
+          if="install.log.present">
 
     <loadfile property="files" srcFile="${install.log}"/>
     <listdelete>
@@ -1009,7 +1020,6 @@
     <delete file="${install.log}" failonerror="false"/>
 
   </target>
-
 
   <!--
    !   =============================
