--- a/junit/build.xml
+++ b/junit/build.xml
@@ -313,10 +313,22 @@
    !   ===================================
    !
    ! Uses the content of the "${install.log}" to remove the files
-   ! that were copied into place by the install target.
+   ! that were copied into place by the install target. Does nothing
+   ! if the installation log is not present.
    !-->
   <target name="deinstall"
           description="-> undo the install target">
+
+    <available file="${install.log}" property="install.log.present"/>
+
+    <antcall target="real_deinstall"/>
+
+  </target>
+
+  <!-- Real deinstall target. Only activated if "install.log.present"
+   !   is defined -->
+  <target name="real_deinstall" 
+          if="install.log.present">
 
     <loadfile property="files" srcFile="${install.log}"/>
     <listdelete>
