--- a/build.xml
+++ b/build.xml
@@ -116,8 +116,8 @@
      <echo message="Executing compatibility NDArray target: ${what}"/>
      <ant dir="./oldarray" target="${what}"/>
 
-     <!-- <echo message="Executing NDArray target: ${what}"/>
-     <ant dir="./array" target="${what}"/>-->
+     <echo message="Executing NDArray target: ${what}"/>
+     <ant dir="./array" target="${what}"/>
 
      <echo message="Executing HDX target: ${what}"/>
      <ant dir="./hdx" target="${what}"/>
