--- a/oldarray/build.xml
+++ b/oldarray/build.xml
@@ -79,8 +79,8 @@
    !-->
 
   <!-- Define the package name and current versions -->
-  <property name="Name" value="NDArray"/>
-  <property name="name" value="ndarray"/>
+  <property name="Name" value="OldArray"/>
+  <property name="name" value="oldarray"/>
   <property name="version" value="0.1"/>
 
   <!-- Extra task options, if any -->
@@ -137,8 +137,7 @@
     <jar destfile="lib/oldarray/array.jar" basedir="${dist.dir}"
          update="true" excludes="**">
 
-      <!-- Create the manifest, note wraps in column 80 so avoid
-       !   this. TODO: perform this task automatically?-->
+      <!-- Create the manifest -->
       <manifest>
         <attribute name="Built-By" value="${user.name}"/>
         <attribute name="Class-Path" value="../util/util.jar"/>
@@ -240,7 +239,7 @@
     <mkdir dir="${star.archive.dir}"/>
     <zip destfile="${star.archive.dir}/${archive.name}.zip">
 
-      <zipfileset dir="${dist.docs}" prefix="${name}/docs"/>
+      <!--<zipfileset dir="${dist.docs}" prefix="${name}/docs"/>-->
       <zipfileset dir="${dist.dir}" includes="build.xml" prefix="${name}"/>
       <zipfileset dir="${dist.lib}" prefix="${name}/lib"/>
 
@@ -248,7 +247,7 @@
 
     <tar longfile="gnu" destfile="${archive.name}.tar">
 
-      <tarfileset dir="${dist.docs}" prefix="${name}/docs"/>
+      <!--<tarfileset dir="${dist.docs}" prefix="${name}/docs"/>-->
       <tarfileset dir="${dist.dir}" prefix="${name}">
         <include name="build.xml"/>
       </tarfileset>
@@ -292,7 +291,7 @@
 
     <mkdir dir="${star.install}"/>
     <mkdir dir="${star.lib}"/>
-    <mkdir dir="${star.docs}"/>
+    <!--<mkdir dir="${star.docs}"/>-->
 
     <loggedcopy todir="${star.lib}"
                 logfile="${install.log}"
@@ -301,12 +300,12 @@
       <fileset dir="${dist.lib}"/>
     </loggedcopy>
 
-    <loggedcopy todir="${star.docs}"
+    <!--<loggedcopy todir="${star.docs}"
                 logfile="${install.log}"
                 overwrite="${install.overwrite}"
                 logfileAppend="true">
       <fileset dir="${dist.docs}"/>
-    </loggedcopy>
+    </loggedcopy>-->
 
   </target>
 
