--- a/util/build.xml
+++ b/util/build.xml
@@ -93,7 +93,7 @@
   <property name="chmod.fail" value="false"/>
 
   <!-- JUnit test options -->
-  <property name="junit.fork" value="false"/>
+  <property name="junit.fork" value="true"/>
   <property name="junit.filtertrace" value="off"/>
   <property name="junit.summary" value="no"/>
 
@@ -692,6 +692,7 @@
           <exclude name="**/testcases/*"/>
           <exclude name="**/VERSION"/>
           <exclude name="**/README"/>
+          <exclude name="**/.*"/>
       </fileset>
 
       <group title="${Name} API" packages="${package.name}*"/>
